--- a/room-details.html
+++ b/room-details.html
@@ -3,47 +3,45 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Jomo Kenyatta International Airport Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway</title>
+  <title>Airbnb Near JKIA Nairobi | Polarhomes Syokimau Rooms</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
+  <link rel="canonical" href="https://polarhomes.org/room-details" />
 
   <!-- SEO Meta Tags -->
-  <meta name="title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway">
-  <meta name="description" content="Looking for affordable and stylish Jomo Kenyatta International Airport accommodation? Polarhomes offers modern, secure Airbnb rooms in Syokimau near Nairobi Expressway. Fast Wi-Fi, 24/7 security, and ideal for travelers from JKIA or SGR. Book your stay today.">
-  <meta name="keywords" content="Jomo Kenyatta International Airport accommodation, syokimau airbnb, nairobi airport stay, sgr accommodation, polarhomes airbnb, expressway room rental, airport guesthouse, short stay near JKIA, affordable jkia lodging, syokimau furnished apartment, secure airbnb syokimau, nairobi airport apartment, polarhomes nairobi, rooms with wifi jkia, polarhomes kenya">
-
+  <meta name="description" content="Affordable Airbnb rooms near JKIA Nairobi & Syokimau. Secure stays with Wi-Fi, parking & easy access to Nairobi Expressway. Book Polarhomes today.">
   <meta name="author" content="Polarhomes">
-  <meta name="robots" content="index, follow" />
-  <meta name="googlebot" content="index, follow" />
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.polarhomes.org/room-details">
-  <meta property="og:title" content="Jomo Kenyatta International Airport Accommodation | Polarhomes Airbnb Syokimau">
-  <meta property="og:description" content="Explore Polarhomes Airbnb rooms near Jomo Kenyatta International Airport. Affordable, modern, and secure stays in Syokimau with fast Wi-Fi and access to Nairobi Expressway.">
-  <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <meta property="og:url" content="https://polarhomes.org/room-details">
+  <meta property="og:title" content="Airbnb Near JKIA Nairobi | Polarhomes Syokimau">
+  <meta property="og:description" content="Modern Airbnb rooms near JKIA & Nairobi Expressway. Affordable, safe, and ideal for travelers.">
+  <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
+  <meta property="og:site_name" content="Polarhomes">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://www.polarhomes.org/room-details">
-  <meta name="twitter:title" content="Jomo Kenyatta International Airport Accommodation | Polarhomes Airbnb Syokimau">
-  <meta name="twitter:description" content="See Polarhomes Airbnb details near Jomo Kenyatta International Airport & Nairobi Expressway. Clean, affordable short stays with all amenities in Syokimau.">
-  <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <meta name="twitter:url" content="https://polarhomes.org/room-details">
+  <meta name="twitter:title" content="Airbnb Near JKIA Nairobi | Polarhomes Syokimau">
+  <meta name="twitter:description" content="Stay near JKIA with Polarhomes Airbnb in Syokimau. Affordable, secure rooms with Wi-Fi & easy Expressway access.">
+  <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
   <!-- Favicon -->
-  <link href="img/logo.jpg" rel="icon" type="image/x-icon">
+  <link href="/img/logo.jpg" rel="icon" type="image/x-icon">
 
-  <!-- Schema.org Structured Data -->
+  <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "LodgingBusiness",
+    "@id": "https://polarhomes.org/#lodging",
     "name": "Polarhomes",
-    "image": "https://www.polarhomes.org/img/logo.jpg",
-    "url": "https://www.polarhomes.org/room-details",
+    "image": "https://polarhomes.org/img/logo.jpg",
+    "url": "https://polarhomes.org/room-details",
     "telephone": "+254723225791",
     "priceRange": "$$",
     "address": {
@@ -60,32 +58,15 @@
       "longitude": 36.9258
     },
     "amenityFeature": [
-      {
-        "@type": "LocationFeatureSpecification",
-        "name": "Free Wi-Fi",
-        "value": true
-      },
-      {
-        "@type": "LocationFeatureSpecification",
-        "name": "Near JKIA Airport",
-        "value": true
-      },
-      {
-        "@type": "LocationFeatureSpecification",
-        "name": "Secure Parking",
-        "value": true
-      },
-      {
-        "@type": "LocationFeatureSpecification",
-        "name": "24/7 Check-in",
-        "value": true
-      }
+      { "@type": "LocationFeatureSpecification", "name": "Free Wi-Fi", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Near JKIA Airport", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Secure Parking", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "24/7 Check-in", "value": true }
     ],
-    "description": "Affordable and secure Airbnb accommodation in Syokimau near Jomo Kenyatta International Airport and Nairobi Expressway. Ideal for travelers, business guests, and short stays.",
+    "description": "Secure and affordable Airbnb accommodation near JKIA Nairobi & Nairobi Expressway. Ideal for travelers and business guests.",
     "sameAs": [
       "https://www.facebook.com/polarhomes",
-      "https://www.instagram.com/polarhomes",
-      "https://www.polarhomes.org"
+      "https://www.instagram.com/polarhomes"
     ]
   }
   </script>
@@ -110,7 +91,7 @@
   <!-- Custom CSS -->
   <link href="css/style.css" rel="stylesheet">
 </head>
-
+  
 <body>
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
