--- a/room.html
+++ b/room.html
@@ -1,88 +1,86 @@
 <head>
-    <meta charset="utf-8">
-    <title>Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>Polarhomes | Airbnb Rooms Near JKIA & Nairobi Expressway</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	  <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
-  <meta name="robots" content="index, follow" />
-  <meta name="googlebot" content="index, follow" />
+  <!-- Canonical -->
+  <link rel="canonical" href="https://polarhomes.org/room" />
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <meta name="googlebot" content="index, follow">
 
-    <!-- Primary SEO Meta Tags -->
-    <meta name="title" content="Jomo Kenyatta International Airport Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway">
-    <meta name="description" content="Book cozy, affordable rooms near Jomo Kenyatta International Airport airport in Syokimau. Polarhomes offers secure, stylish Airbnbs along the Nairobi Expressway, perfect for travelers & short stays.">
-    <meta name="keywords" content="Jomo Kenyatta International Airport accommodation, syokimau airbnb, nairobi airport stay, sgr accommodation, polarhomes airbnb, expressway room rental, airport guesthouse, short stay near JKIA, affordable jkia lodging, syokimau furnished apartment, secure airbnb syokimau, nairobi airport apartment, polarhomes nairobi, rooms with wifi jkia, polarhomes kenya, polarhomes, airbnb near JKIA, rooms near JKIA, syokimau airbnb, Nairobi expressway accommodation, short stay Nairobi, inedesign Makumbi Park, apartments JKIA, JKIA rooms, airbnb syokimau, polarhomes syokimau, near airport nairobi, airbnb near expressway">
-    <meta name="author" content="Polarhomes">
-	<meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
+  <!-- SEO Meta -->
+  <meta name="description" content="Affordable Airbnb rooms in Syokimau near JKIA & Nairobi Expressway. Secure, modern, and perfect for travelers & business stays. Book Polarhomes today.">
+  <meta name="author" content="Polarhomes">
+  <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/room">
-    <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near Jomo Kenyatta International Airport, Nairobi">
-    <meta property="og:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near Jomo Kenyatta International Airport and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://polarhomes.org/room">
+  <meta property="og:title" content="Polarhomes | Airbnb Near JKIA & Nairobi Expressway">
+  <meta property="og:description" content="Stay in Syokimau near JKIA & Nairobi Expressway. Secure, furnished Airbnb rooms with Wi-Fi & parking.">
+  <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
+  <meta property="og:site_name" content="Polarhomes">
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/room">
-    <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Rooms Near Jomo Kenyatta International Airport, Nairobi">
-    <meta name="twitter:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near Jomo Kenyatta International Airport and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://polarhomes.org/room">
+  <meta name="twitter:title" content="Polarhomes | Airbnb Near JKIA & Nairobi Expressway">
+  <meta name="twitter:description" content="Affordable & stylish Airbnb rooms in Syokimau, Nairobi near JKIA & Expressway. Perfect for short stays.">
+  <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
-    <!-- Schema.org JSON-LD Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LodgingBusiness",
-      "name": "Polarhomes",
-      "image": "https://www.polarhomes.org/img/logo.jpg",
-      "description": "Polarhomes offers well-furnished, secure short-stay apartments and Airbnb rooms in Syokimau, near JKIA and the Nairobi Expressway.",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Makumbi Park, Syokimau",
-        "addressLocality": "Nairobi",
-        "addressCountry": "Kenya"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": -1.36202,
-        "longitude": 36.95185
-      },
-      "url": "https://www.polarhomes.org/room",
-      "telephone": "+254723225791",
-      "priceRange": "$$",
-      "amenityFeature": [
-        { "@type": "LocationFeatureSpecification", "name": "Free Wi-Fi", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Secure Parking", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "24/7 Check-in", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Near Jomo Kenyatta International Airport Airport", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "near Nairobi Expressway", "value": true }
-      ]
-    }
-    </script>
+  <!-- Schema JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LodgingBusiness",
+    "@id": "https://polarhomes.org/#lodging",
+    "name": "Polarhomes",
+    "image": "https://polarhomes.org/img/logo.jpg",
+    "description": "Polarhomes offers secure and stylish Airbnb rooms in Syokimau near JKIA & Nairobi Expressway. Ideal for travelers and business guests.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Makumbi Park, Syokimau",
+      "addressLocality": "Nairobi",
+      "addressRegion": "Nairobi",
+      "postalCode": "00501",
+      "addressCountry": "KE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": -1.36202,
+      "longitude": 36.95185
+    },
+    "url": "https://polarhomes.org/room",
+    "telephone": "+254723225791",
+    "priceRange": "$$",
+    "amenityFeature": [
+      { "@type": "LocationFeatureSpecification", "name": "Free Wi-Fi", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Secure Parking", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "24/7 Check-in", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Near Jomo Kenyatta International Airport", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Near Nairobi Expressway", "value": true }
+    ]
+  }
+  </script>
 
-    <!-- Favicon -->
-    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
+  <!-- Favicon -->
+  <link rel="icon" href="/img/logo.jpg" type="image/x-icon">
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Fonts & Icons -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Icon Fonts -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Vendor CSS -->
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet">
 
-    <!-- Vendor Libraries -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet">
-
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Main Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+  <!-- Bootstrap & Main CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -577,3 +575,4 @@
 </body>
 
 </html>
+
