--- a/service-detail.html
+++ b/service-detail.html
@@ -3,82 +3,80 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Polarhomes | Service Details | Airbnb in Syokimau near JKIA</title>
+  <title>Polarhomes | Service Details | Airbnb Near JKIA & Nairobi Expressway</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/service-detail.html" />
-  
-  <!-- Robots -->
-  <meta name="robots" content="index, follow" />
-  <meta name="googlebot" content="index, follow" />
+  <!-- Canonical -->
+  <link rel="canonical" href="https://polarhomes.org/service-detail" />
 
-  <!-- SEO Meta Tags -->
-  <meta name="title" content="Polarhomes | Room Details | Airbnb near Jomo Kenyatta International Airport, Nairobi Expressway">
-  <meta name="description" content="Explore detailed information about Polarhomes Airbnb rooms near JKIA Airport and Nairobi Expressway. See features, amenities, prices, and photos of our cozy, secure stays in Syokimau.">
-  <meta name="keywords" content="Polarhomes room details, Airbnb room near Jomo Kenyatta International Airport, Syokimau stays, Nairobi short stays, furnished apartment Nairobi, secure Airbnb Syokimau, Nairobi airport room, Polarhomes listing, Syokimau guesthouse, rooms with Wi-Fi JKIA, short term rental Syokimau, budget Airbnb Nairobi, Nairobi Expressway room rental, stylish Airbnb Kenya, Polarhomes amenities, Polarhomes accommodation">
+  <!-- Robots -->
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <meta name="googlebot" content="index, follow">
+
+  <!-- SEO Meta -->
+  <meta name="description" content="See full details of Polarhomes Airbnb rooms in Syokimau near JKIA & Nairobi Expressway. Affordable, secure, and fully furnished stays.">
   <meta name="author" content="Polarhomes">
   <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
-  <!-- Open Graph / Facebook -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.polarhomes.org/service-detail.html">
-  <meta property="og:title" content="Polarhomes | Room Details | Cozy Airbnb Stay near JKIA">
-  <meta property="og:description" content="Get all the details on our comfortable and secure Airbnb rooms at Polarhomes. Located in Syokimau near JKIA and Nairobi Expressway. View photos, amenities, and book now.">
-  <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <meta property="og:url" content="https://polarhomes.org/service-detail">
+  <meta property="og:title" content="Polarhomes | Service Details | Airbnb Near JKIA & Expressway">
+  <meta property="og:description" content="Discover features, amenities, and pricing of Polarhomes Airbnb stays in Syokimau near JKIA and Nairobi Expressway. Book your stay today.">
+  <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
+  <meta property="og:site_name" content="Polarhomes">
 
-  <!-- Twitter Meta Tags -->
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://www.polarhomes.org/service-detail.html">
-  <meta name="twitter:title" content="Polarhomes | Room Details | Airbnb Jomo Kenyatta International Airport Nairobi">
-  <meta name="twitter:description" content="See full details of Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Affordable, clean, and fully equipped stays in Syokimau.">
-  <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <meta name="twitter:url" content="https://polarhomes.org/service-detail">
+  <meta name="twitter:title" content="Polarhomes | Airbnb Near JKIA & Nairobi Expressway">
+  <meta name="twitter:description" content="Detailed Airbnb service info: affordable, secure, and fully equipped Polarhomes stays in Syokimau near JKIA & Nairobi Expressway.">
+  <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
-  <!-- Schema.org JSON-LD Structured Data -->
+  <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebPage",
-    "name": "Polarhomes Service Details | Airbnb Syokimau JKIA",
-    "url": "https://www.polarhomes.org/service-detail.html",
-    "description": "Full details for this Polarhomes Airbnb service near JKIA including pricing, features, and amenities.",
-    "isPartOf": {
-      "@type": "WebSite",
-      "url": "https://www.polarhomes.org/"
-    },
-    "publisher": {
+    "@type": "Service",
+    "@id": "https://polarhomes.org/service-detail.html#service",
+    "name": "Polarhomes Airbnb Service Details",
+    "url": "https://polarhomes.org/service-detail",
+    "description": "Detailed information on Polarhomes Airbnb service including features, amenities, and booking details. Located in Syokimau near JKIA and Nairobi Expressway.",
+    "provider": {
       "@type": "Organization",
       "name": "Polarhomes",
-      "url": "https://www.polarhomes.org/",
+      "url": "https://polarhomes.org/",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://www.polarhomes.org/img/logo.jpg"
+        "url": "https://polarhomes.org/img/logo.jpg"
       }
+    },
+    "areaServed": {
+      "@type": "Place",
+      "name": "Nairobi, Kenya"
     }
   }
   </script>
 
   <!-- Favicon -->
-  <link href="https://www.polarhomes.org/img/logo.jpg" rel="icon" type="image/x-icon">
+  <link href="https://polarhomes.org/img/logo.jpg" rel="icon" type="image/x-icon">
 
-  <!-- Google Web Fonts -->
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- Icon Font Stylesheets -->
+  <!-- Icon Fonts -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-  <!-- Libraries Stylesheets -->
+  <!-- Vendor CSS -->
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-  <!-- Customized Bootstrap Stylesheet -->
+  <!-- Bootstrap & Main CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Template Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
 </head>
 
