--- a/service.html
+++ b/service.html
@@ -2,90 +2,96 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        	  <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
-  <meta name="robots" content="index, follow" />
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://polarhomes.org/service" />
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
   <meta name="googlebot" content="index, follow" />
 
-    <!-- Primary Meta Tags -->
-    <meta name="title" content="Polarhomes | Affordable Airbnb Rooms Near Jomo Kenyatta International Airport & Nairobi Expressway">
-    <meta name="description" content="Book cozy, affordable Airbnb rooms in Syokimau near JKIA and Nairobi Expressway. Safe, stylish, and perfect for short stays.">
-    <meta name="keywords" content="Jomo Kenyatta International Airport accomodation, accomodation near jkia, polarhomes, Airbnb Jomo Kenyatta International Airport, Syokimau Airbnb, rooms near Nairobi Expressway, short stay Nairobi, Makumbi Park apartments, airbnb syokimau, affordable airbnb Nairobi, JKIA lodging, Nairobi airport stay">
-    <meta name="author" content="Polarhomes">
-    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway">
+  <meta name="description" content="Book cozy, affordable Airbnb rooms in Syokimau near JKIA and Nairobi Expressway. Safe, stylish, and perfect for short stays.">
+  <meta name="author" content="Polarhomes">
+  <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
-    <!-- Open Graph / Facebook Meta Tags -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/service">
-    <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near Jomo Kenyatta International Airport, Nairobi">
-    <meta property="og:description" content="Affordable, well-furnished rooms in Syokimau near Jomo Kenyatta International Airport airport and the Nairobi Expressway. Clean, safe, and ideal for short-term stays.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Open Graph / Facebook Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://polarhomes.org/service">
+  <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA Nairobi">
+  <meta property="og:description" content="Affordable, well-furnished rooms in Syokimau near Jomo Kenyatta International Airport and Nairobi Expressway. Clean, safe, and ideal for short-term stays.">
+  <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
+  <meta property="og:site_name" content="Polarhomes" />
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/service">
-    <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Rooms Near Jomo Kenyatta International Airport, Nairobi">
-    <meta name="twitter:description" content="Affordable, stylish apartments and rooms in Syokimau near Jomo Kenyatta International Airport. Perfect for travelers and short stays.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://polarhomes.org/service">
+  <meta name="twitter:title" content="Polarhomes | Airbnb Rooms Near JKIA Nairobi">
+  <meta name="twitter:description" content="Affordable, stylish apartments and rooms in Syokimau near JKIA. Perfect for travelers and short stays.">
+  <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
-    <!-- Schema.org JSON-LD Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LodgingBusiness",
-      "name": "Polarhomes",
-      "image": "https://www.polarhomes.org/img/logo.jpg",
-      "description": "Polarhomes offers clean, safe, and affordable Airbnb rooms in Syokimau, near Jomo Kenyatta International Airport and Nairobi Expressway.",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Makumbi Park, Syokimau",
-        "addressLocality": "Nairobi",
-        "addressCountry": "KE"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": -1.36202,
-        "longitude": 36.95185
-      },
-      "url": "https://www.polarhomes.org/service",
-      "telephone": "+254 723 225 791",
-      "priceRange": "$$",
-      "amenityFeature": [
-        { "@type": "LocationFeatureSpecification", "name": "Free Wi-Fi", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Secure Parking", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "24/7 Check-in", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Close to JKIA Airport", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Near Nairobi Expressway", "value": true }
-      ]
-    }
-    </script>
+  <!-- Schema.org JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LodgingBusiness",
+    "name": "Polarhomes",
+    "image": "https://polarhomes.org/img/logo.jpg",
+    "description": "Polarhomes offers clean, safe, and affordable Airbnb rooms in Syokimau, near Jomo Kenyatta International Airport and Nairobi Expressway.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Makumbi Park, Syokimau",
+      "addressLocality": "Nairobi",
+      "addressCountry": "KE",
+      "postalCode": "00100"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": -1.36202,
+      "longitude": 36.95185
+    },
+    "url": "https://polarhomes.org/service",
+    "telephone": "+254723225791",
+    "priceRange": "$$",
+    "amenityFeature": [
+      { "@type": "LocationFeatureSpecification", "name": "Free Wi-Fi", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Secure Parking", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "24/7 Check-in", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Close to JKIA Airport", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Near Nairobi Expressway", "value": true }
+    ],
+    "sameAs": [
+      "https://www.facebook.com/polarhomes",
+      "https://www.instagram.com/polarhomes",
+      "https://twitter.com/polarhomes"
+    ]
+  }
+  </script>
 
-    <!-- Favicon -->
-    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
+  <!-- Favicon -->
+  <link rel="icon" href="/img/logo.jpg" type="image/x-icon">
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
+  <!-- Google Web Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
 
-    <!-- Icon Font Stylesheets -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Icon Font Stylesheets -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheets -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+  <!-- Libraries Stylesheets -->
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Customized Bootstrap Stylesheet -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Main Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+  <!-- Main Template Stylesheet -->
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 
@@ -515,3 +521,4 @@
 </body>
 
 </html>
+
