--- a/testimonial.html
+++ b/testimonial.html
@@ -2,93 +2,97 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Polarhomes | Airbnb Testimonials & Guest Reviews in Syokimau near Jomo Kenyatta International Airport</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>Polarhomes | Guest Reviews & Airbnb Testimonials near JKIA Nairobi</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        	  <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
-  <meta name="robots" content="index, follow" />
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://polarhomes.org/testimonial" />
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
   <meta name="googlebot" content="index, follow" />
 
-    <!-- SEO Meta Tags -->
-    <meta name="title" content="Polarhomes | Airbnb Testimonials & Guest Reviews in Syokimau near Jomo Kenyatta International Airport">
-    <meta name="description" content="Jomo Kenyatta International Airport accomodation, accomodation near jkia, Read real testimonials and honest guest reviews about Polarhomes Airbnb stays near JKIA airport and Nairobi Expressway. See why guests love our clean, secure, and stylish accommodations.">
-    <meta name="keywords" content="Jomo Kenyatta International Airport accomodation, accomodation near Jomo Kenyatta International Airport, Polarhomes reviews, Polarhomes testimonials, Airbnb reviews JKIA, guest reviews Syokimau, Nairobi Airbnb feedback, Nairobi airport lodging reviews, short stay reviews Syokimau, Airbnb Kenya experiences, Polarhomes customer experiences, trusted Airbnb Nairobi, Airbnb near Nairobi Expressway, clean Airbnb Syokimau, safe Airbnb Nairobi">
-    <meta name="author" content="Polarhomes">
-    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Read real guest reviews of Polarhomes Airbnb in Syokimau near JKIA & Nairobi Expressway. Guests love our clean, secure, and stylish short-stay rentals.">
+  <meta name="author" content="Polarhomes">
+  <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/testimonial">
-    <meta property="og:title" content="Polarhomes | Trusted Guest Reviews near Jomo Kenyatta International Airport & Nairobi Expressway">
-    <meta property="og:description" content="Discover why travelers love Polarhomes! Authentic reviews from happy Airbnb guests staying near JKIA Airport and Nairobi Expressway.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://polarhomes.org/testimonial">
+  <meta property="og:title" content="Polarhomes | Guest Reviews near JKIA & Nairobi Expressway">
+  <meta property="og:description" content="Discover why travelers love Polarhomes! Honest testimonials from Airbnb guests staying near JKIA and Nairobi Expressway.">
+  <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
+  <meta property="og:site_name" content="Polarhomes" />
 
-    <!-- Twitter Meta -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/testimonial">
-    <meta name="twitter:title" content="Polarhomes | Airbnb Testimonials & Guest Experiences in Nairobi">
-    <meta name="twitter:description" content="Trusted by hundreds of guests – read genuine reviews about Polarhomes Airbnb rooms near Jomo Kenyatta International Airport and Nairobi Expressway. Clean, secure, and cozy.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Twitter Meta -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://polarhomes.org/testimonial">
+  <meta name="twitter:title" content="Polarhomes | Guest Reviews near JKIA Nairobi">
+  <meta name="twitter:description" content="Read genuine reviews from Airbnb guests who stayed at Polarhomes near JKIA and Nairobi Expressway.">
+  <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
-     <!-- Schema.org JSON-LD Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LodgingBusiness",
-      "name": "Polarhomes",
-      "image": "https://www.polarhomes.org/img/logo.jpg",
-      "@id": "https://www.polarhomes.org/testimonial",
-      "url": "https://www.polarhomes.org/testimonial",
-      "telephone": "+254723225791",
-      "priceRange": "$$",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Syokimau, Nairobi",
-        "addressLocality": "Nairobi",
-        "postalCode": "00100",
-        "addressCountry": "KE"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": -1.3308,
-        "longitude": 36.9274
-      },
-      "description": "Polarhomes offers Airbnb accommodation near Jomo Kenyatta International Airport Airport and Nairobi Expressway. Enjoy safe, stylish, and affordable short-term and long-term rentals in Syokimau.",
-      "amenityFeature": [
-        { "@type": "LocationFeatureSpecification", "name": "Free WiFi", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Free Parking", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Proximity to Jomo Kenyatta International Airport Airport", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Fully Furnished Units", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "24/7 Security", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Close to SGR & Expressway", "value": true }
-      ]
+  <!-- Schema.org JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LodgingBusiness",
+    "name": "Polarhomes",
+    "image": "https://polarhomes.org/img/logo.jpg",
+    "@id": "https://polarhomes.org/testimonial",
+    "url": "https://polarhomes.org/testimonial",
+    "telephone": "+254723225791",
+    "priceRange": "$$",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Syokimau, Nairobi",
+      "addressLocality": "Nairobi",
+      "postalCode": "00100",
+      "addressCountry": "KE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": -1.3308,
+      "longitude": 36.9274
+    },
+    "description": "Polarhomes offers Airbnb accommodation near Jomo Kenyatta International Airport and Nairobi Expressway. Safe, stylish, and affordable rentals in Syokimau.",
+    "amenityFeature": [
+      { "@type": "LocationFeatureSpecification", "name": "Free WiFi", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Free Parking", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Close to JKIA Airport", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Fully Furnished Units", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "24/7 Security", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Near SGR & Expressway", "value": true }
+    ],
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.8",
+      "reviewCount": "120"
     }
-    </script>
+  }
+  </script>
 
-    <!-- Favicon -->
-    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
+  <!-- Favicon -->
+  <link rel="icon" href="/img/logo.jpg" type="image/x-icon">
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Google Web Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Icon Font Stylesheets -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Icon Font Stylesheets -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheets -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+  <!-- Libraries Stylesheets -->
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Customized Bootstrap Stylesheet -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+  <!-- Template Stylesheet -->
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -438,3 +442,4 @@
 </body>
 
 </html>
+
