--- a/room.html
+++ b/room.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+	
 <head>
   <meta charset="utf-8">
   <title>Polarhomes | Airbnb Rooms Near JKIA & Nairobi Expressway</title>
@@ -575,4 +578,5 @@
 </body>
 
 </html>
+
 
