--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
 
 <!-- Styles -->
 <style>
-        .logo-img {
-        width: 90px; 
-        height: 70px;
-    }
+.logo-img {
+  width: 90px;   
+  height: auto;  
+}
 
     .fancy-text {
         font-size: 2rem;
@@ -857,5 +857,6 @@
 </body>
 
 </html>
+
 
 
