--- a/about.html
+++ b/about.html
@@ -147,11 +147,10 @@
 
 <!-- Styles -->
 <style>
-        .logo-img {
-        width: 90px; 
-        height: 70px;
-    }
-
+.logo-img {
+  width: 90px;  
+  height: auto;  
+}
     .fancy-text {
         font-size: 2rem;
         font-weight: bold;
@@ -532,4 +531,5 @@
 </body>
 
 </html>
+
 
