--- a/booking.html
+++ b/booking.html
@@ -160,10 +160,10 @@
 
 <!-- Styles -->
 <style>
-        .logo-img {
-        width: 90px; 
-        height: 70px;
-    }
+.logo-img {
+  width: 90px;  
+  height: auto;  
+}
 
     .fancy-text {
         font-size: 2rem;
@@ -516,4 +516,5 @@
 </body>
 
 </html>
+
 
