--- a/contact.html
+++ b/contact.html
@@ -159,10 +159,10 @@
 
 <!-- Styles -->
 <style>
-        .logo-img {
-        width: 90px; 
-        height: 70px;
-    }
+.logo-img {
+  width: 90px;  
+  height: auto;  
+}
 
     .fancy-text {
         font-size: 2rem;
@@ -464,4 +464,5 @@
 </body>
 
 </html>
+
 
