--- a/room-details.html
+++ b/room-details.html
@@ -167,10 +167,10 @@
 
 <!-- Styles -->
 <style>
-        .logo-img {
-        width: 90px; 
-        height: 70px;
-    }
+.logo-img {
+  width: 90px;  
+  height: auto;  
+}
 
     .fancy-text {
         font-size: 2rem;
