--- a/room.html
+++ b/room.html
@@ -161,10 +161,10 @@
 
 <!-- Styles -->
 <style>
-        .logo-img {
-        width: 90px; 
-        height: 70px;
-    }
+.logo-img {
+  width: 90px;  
+  height: auto;  
+}
 
     .fancy-text {
         font-size: 2rem;
@@ -578,5 +578,6 @@
 </body>
 
 </html>
+
 
 
