--- a/testimonial.html
+++ b/testimonial.html
@@ -170,10 +170,10 @@
 
 <!-- Styles -->
 <style>
-        .logo-img {
-        width: 90px;
-        height: 70px;
-    }
+.logo-img {
+  width: 90px;  
+  height: auto;  
+}
 
     .fancy-text {
         font-size: 2rem;
@@ -442,4 +442,5 @@
 </body>
 
 </html>
+
 
