--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                 </div>
             </div>
 
-          <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 p-lg-0">
+    <!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light p-3 p-lg-0" style="background-color: #ffffff;">
     <!-- Mobile & Tablet Logo (Hidden on large screens) -->
     <a href="index" class="navbar-brand d-flex align-items-center d-lg-none">
         <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
@@ -835,6 +835,7 @@
 </body>
 
 </html>
+
 
 
 
