corrections on about part

--- a/index.html
+++ b/index.html
@@ -314,52 +314,64 @@
 
 <!-- About Start -->
 <div class="container-xxl py-5">
-    <div class="container">
-        <div class="row g-5 align-items-center">
-            <div class="col-lg-6">
-                <h6 class="section-title text-start text-primary text-uppercase">About Us</h6>
-                <h1 class="mb-4">Discover <span class="text-primary text-uppercase">Unforgettable Stays</span></h1>
-               <p class="mb-4">
-                    Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
-                    Nestled in the capital city of Kenya, near the Nairobi Expressway, <strong>near Jomo Kenyatta International Airport</strong>, <strong>near SGR</strong> and close to <strong>major shopping center in Syokimau</strong>, we offer a seamless blend of comfort, convenience, and adventure.
-                    Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation, we provide a 
-                    curated selection of <strong>premium accommodations</strong> tailored to your needs.
-                </p>
-		    <div class="row g-3 pb-4">
-                    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="border rounded p-1">
-                            <div class="border rounded text-center p-4">
-                                <i class="fa fa-hotel fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">52</h2>
-                                <p class="mb-0">Premium Listings</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.3s">
-                        <div class="border rounded p-1">
-                            <div class="border rounded text-center p-4">
-                                <i class="fa fa-users-cog fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">97</h2>
-                                <p class="mb-0">Verified Hosts</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="border rounded p-1">
-                            <div class="border rounded text-center p-4">
-                                <i class="fa fa-users fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">216</h2>
-                                <p class="mb-0">Happy Guests</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <a class="btn btn-primary py-3 px-5 mt-2" href="about">Explore More</a>
+  <div class="container">
+    <div class="row g-5 align-items-center">
+      
+      <!-- Text Content -->
+      <div class="col-lg-6">
+        <h6 class="section-title text-start text-primary text-uppercase">About Us</h6>
+        <h1 class="mb-4">
+          Discover <span class="text-primary text-uppercase">Unforgettable Stays</span>
+        </h1>
+        <p class="mb-4">
+          Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
+          Nestled in the capital city of Kenya, near the Nairobi Expressway, <strong>near Jomo Kenyatta International Airport</strong>, <strong>near SGR</strong> and close to <strong>major shopping center in Syokimau</strong>, we offer a seamless blend of comfort, convenience, and adventure.
+          Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation, we provide a 
+          curated selection of <strong>premium accommodations</strong> tailored to your needs.
+        </p>
+
+        <div class="row g-3 pb-4">
+          <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
+            <div class="border rounded p-1">
+              <div class="border rounded text-center p-4">
+                <i class="fa fa-hotel fa-2x text-primary mb-2"></i>
+                <h2 class="mb-1" data-toggle="counter-up">52</h2>
+                <p class="mb-0">Premium Listings</p>
+              </div>
             </div>
-<div class="col-lg-6">
-  <div class="about-gallery">
-    <div class="about-main">
-      <img src="img/about-image-1.jpg" alt="Luxury Stay Polarhomes" class="img-fluid rounded shadow-lg">
+          </div>
+          <div class="col-sm-4 wow fadeIn" data-wow-delay="0.3s">
+            <div class="border rounded p-1">
+              <div class="border rounded text-center p-4">
+                <i class="fa fa-users-cog fa-2x text-primary mb-2"></i>
+                <h2 class="mb-1" data-toggle="counter-up">97</h2>
+                <p class="mb-0">Verified Hosts</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 wow fadeIn" data-wow-delay="0.5s">
+            <div class="border rounded p-1">
+              <div class="border rounded text-center p-4">
+                <i class="fa fa-users fa-2x text-primary mb-2"></i>
+                <h2 class="mb-1" data-toggle="counter-up">216</h2>
+                <p class="mb-0">Happy Guests</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <a class="btn btn-primary py-3 px-5 mt-2" href="about">Explore More</a>
+      </div>
+
+      <!-- Image -->
+      <div class="col-lg-6">
+        <div class="about-gallery">
+          <div class="about-main">
+            <img src="img/about-image-1.jpg" alt="Luxury Stay Polarhomes" class="img-fluid rounded shadow-lg">
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
@@ -378,7 +390,6 @@
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.25);
 }
 </style>
-
 <!-- About End -->
 
 <!-- Room Start -->
