alot of items 10k plus added, redesigning and build intalls

--- a/index.html
+++ b/index.html
@@ -103,38 +103,11 @@
 
 <!-- Header Start -->
 <header>
-  <!-- Top Contact Bar -->
-  <!--
-  <div class="container-fluid bg-black text-white py-2 px-lg-5 d-none d-lg-flex align-items-center justify-content-between">
-    <div class="d-flex align-items-center">
-      <div class="me-4 d-flex align-items-center">
-        <i class="fa fa-envelope text-gold me-2"></i>
-        <a href="mailto:lindahmiriza@gmail.com" class="text-white text-decoration-none">
-          lindahmiriza@gmail.com
-        </a>
-      </div>
-      <div class="d-flex align-items-center">
-        <i class="fa fa-phone-alt text-gold me-2"></i>
-        <a href="tel:+254723225791" class="text-white text-decoration-none">
-          +254 723 225 791
-        </a>
-      </div>
-    </div>
-    <div class="social-links">
-      <a href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg==" 
-         class="text-white me-3" aria-label="Instagram">
-        <i class="fab fa-instagram fa-lg"></i>
-      </a>
-    </div>
-  </div>
-  -->
-
-  <!-- Logo & Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3 px-lg-5">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-2 px-lg-4">
     <!-- Brand Logo -->
     <a href="index" class="navbar-brand d-flex align-items-center">
       <img src="img/logo.jpg" alt="Polarhomes Luxury Homes Logo" class="logo-img me-2" />
-      <h1 class="m-0 fancy-text">Polarhomes</h1>
+      <h1 class="m-0 fancy-text">PolarHomes</h1>
     </a>
 
     <!-- Mobile Toggle -->
@@ -161,156 +134,81 @@
 
 <!-- Carousel Start -->
 <div class="container-fluid p-0 mb-5">
-    <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="carousel-image" src="img/carousel-1.jpg" alt="Luxurious Stay">
-                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                    <div class="p-3" style="max-width: 700px;">
-                        <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Luxury Stays</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Experience Comfort at PolarHomes</h1>
-                        <a href="room" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Listings</a>
-                        <a href="book" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book Now</a>
-                    </div>
-                </div>
+  <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+
+      <!-- Slide 1 -->
+      <div class="carousel-item active">
+        <img class="carousel-image" src="img/2bedroom-master.jpg" alt="Luxury Stay">
+        <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+          <div class="p-3 text-center">
+            <h6 class="luxury-subtitle mb-3">Exclusive Luxury</h6>
+            <h1 class="luxury-title mb-4">Experience PolarHomes</h1>
+            <div class="d-flex justify-content-center">
+              <a href="room" class="luxury-btn btn-primary me-3">Explore Stays</a>
+              <a href="book" class="luxury-btn btn-light">Book Now</a>
             </div>
-            <div class="carousel-item">
-                <img class="carousel-image" src="img/carousel-2.jpg" alt="Scenic Views">
-                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                    <div class="p-3" style="max-width: 700px;">
-                        <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Scenic Locations</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Stay Near Jomo Kenyatta international airport, sgr and Nairobi express way </h1>
-                        <a href="contact" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Contact Us</a>
-                        <a href="booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Reserve Your Stay</a>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="carousel-image" src="img/carousel-3.jpg" alt="Cozy Interiors">
-                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                    <div class="p-3" style="max-width: 700px;">
-                        <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Elegant Interiors</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Enjoy a Stylish and Cozy Experience</h1>
-                        <a href="service" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Services</a>
-                        <a href="booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book Your Stay</a>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="carousel-image" src="img/carousel-4.jpg" alt="Modern Amenities">
-                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                    <div class="p-3" style="max-width: 700px;">
-                        <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Premium Comfort</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Modern Amenities for a Perfect Stay</h1>
-                        <a href="room" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Amenities</a>
-                        <a href="booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Check Availability</a>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#header-carousel"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+      </div>
+
+      <!-- Slide 2 -->
+      <div class="carousel-item">
+        <img class="carousel-image" src="img/carousel-2.jpg" alt="Scenic Views">
+        <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+          <div class="p-3 text-center">
+            <h6 class="luxury-subtitle mb-3">Unmatched Location</h6>
+            <h1 class="luxury-title mb-4">Stay Near Everything</h1>
+            <div class="d-flex justify-content-center">
+              <a href="contact" class="luxury-btn btn-primary me-3">Get in Touch</a>
+              <a href="booking" class="luxury-btn btn-light">Reserve Stay</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Slide 3 -->
+      <div class="carousel-item">
+        <img class="carousel-image" src="img/carousel-3.jpg" alt="Cozy Interiors">
+        <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+          <div class="p-3 text-center">
+            <h6 class="luxury-subtitle mb-3">Sophisticated Interiors</h6>
+            <h1 class="luxury-title mb-4">Stylish & Cozy Living</h1>
+            <div class="d-flex justify-content-center">
+              <a href="service" class="luxury-btn btn-primary me-3">Our Services</a>
+              <a href="booking" class="luxury-btn btn-light">Book Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Slide 4 -->
+      <div class="carousel-item">
+        <img class="carousel-image" src="img/carousel-4.jpg" alt="Modern Amenities">
+        <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+          <div class="p-3 text-center">
+            <h6 class="luxury-subtitle mb-3">Premium Comfort</h6>
+            <h1 class="luxury-title mb-4">Modern Amenities</h1>
+            <div class="d-flex justify-content-center">
+              <a href="room" class="luxury-btn btn-primary me-3">View Amenities</a>
+              <a href="booking" class="luxury-btn btn-light">Check Availability</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
+
+    <!-- Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
 </div>
 <!-- Carousel End -->
-<style>
-    .carousel-image {
-        width: 100%;
-        height: 500px;
-        object-fit: cover; 
-    }
-    	.room-item img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-</style>
-
-<!-- Booking Start -->
-<div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
-    <div class="container">
-        <form action="https://formspree.io/f/xkgryeaa" method="POST">
-            <div class="bg-white shadow" style="padding: 35px;">
-                <div class="row g-2">
-                    <!-- Date, Guests -->
-                    <div class="col-md-10">
-                        <div class="row g-2">
-                            <!-- Check In -->
-                            <div class="col-md-3">
-                                <div class="date" id="date1" data-target-input="nearest">
-                                    <input type="text" class="form-control datetimepicker-input"
-                                        name="checkin"
-                                        placeholder="Check In" data-target="#date1" data-toggle="datetimepicker" required />
-                                </div>
-                            </div>
-                            <!-- Check Out -->
-                            <div class="col-md-3">
-                                <div class="date" id="date2" data-target-input="nearest">
-                                    <input type="text" class="form-control datetimepicker-input"
-                                        name="checkout"
-                                        placeholder="Check Out" data-target="#date2" data-toggle="datetimepicker" required />
-                                </div>
-                            </div>
-                            <!-- Adults -->
-                            <div class="col-md-3">
-                                <select class="form-select" name="adults" required>
-                                    <option selected disabled>Adult</option>
-                                    <option value="1">1 Person</option>
-                                    <option value="2">2 People</option>
-                                </select>
-                            </div>
-                            <!-- Children -->
-                            <div class="col-md-3">
-                                <select class="form-select" name="children">
-                                    <option selected disabled>Child</option>
-                                    <option value="0">No Child</option>
-                                    <option value="1">1 Child</option>
-                                    <option value="2">2 Children</option>
-                                </select>
-                            </div>
-                            <!-- Email -->
-                            <div class="col-md-6">
-                                <input type="email" class="form-control" name="_replyto" placeholder="Your Email" required />
-                            </div>
-                            <!-- Phone -->
-                            <div class="col-md-6">
-                                <input type="tel" class="form-control" name="phone" placeholder="Your Phone Number" required />
-                            </div>
-                            <!-- Room Type -->
-                            <div class="col-md-6">
-                                <select class="form-select" name="room_type" required>
-                                    <option selected disabled>Select Room</option>
-                                    <option value="Studio Executive suite">Studio Executive suite</option>
-                                    <option value="One Bedroom suite">One Bedroom suite</option>
-                                    <option value="Two Bedroom suite">Two Bedroom suite</option>
-                                    <option value="4 Bedroom suite">4 Bedroom Villa/Stand Alone</option>
-                                </select>
-                            </div>
-                            <!-- Special Request -->
-                            <div class="col-md-6">
-                                <textarea class="form-control" name="message" placeholder="Special Request" rows="2"></textarea>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Submit Button -->
-                    <div class="col-md-2">
-                        <button class="btn btn-primary w-100 h-100" type="submit">Book Now</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-
- <!--Booking End -->
 
 <!-- About Start -->
 <div class="container-xxl py-5">
@@ -560,6 +458,84 @@
         </div>
     </div>
 </div>
+
+<!-- Booking Start -->
+<div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container">
+        <form action="https://formspree.io/f/xkgryeaa" method="POST">
+            <div class="bg-white shadow" style="padding: 35px;">
+                <div class="row g-2">
+                    <!-- Date, Guests -->
+                    <div class="col-md-10">
+                        <div class="row g-2">
+                            <!-- Check In -->
+                            <div class="col-md-3">
+                                <div class="date" id="date1" data-target-input="nearest">
+                                    <input type="text" class="form-control datetimepicker-input"
+                                        name="checkin"
+                                        placeholder="Check In" data-target="#date1" data-toggle="datetimepicker" required />
+                                </div>
+                            </div>
+                            <!-- Check Out -->
+                            <div class="col-md-3">
+                                <div class="date" id="date2" data-target-input="nearest">
+                                    <input type="text" class="form-control datetimepicker-input"
+                                        name="checkout"
+                                        placeholder="Check Out" data-target="#date2" data-toggle="datetimepicker" required />
+                                </div>
+                            </div>
+                            <!-- Adults -->
+                            <div class="col-md-3">
+                                <select class="form-select" name="adults" required>
+                                    <option selected disabled>Adult</option>
+                                    <option value="1">1 Person</option>
+                                    <option value="2">2 People</option>
+                                </select>
+                            </div>
+                            <!-- Children -->
+                            <div class="col-md-3">
+                                <select class="form-select" name="children">
+                                    <option selected disabled>Child</option>
+                                    <option value="0">No Child</option>
+                                    <option value="1">1 Child</option>
+                                    <option value="2">2 Children</option>
+                                </select>
+                            </div>
+                            <!-- Email -->
+                            <div class="col-md-6">
+                                <input type="email" class="form-control" name="_replyto" placeholder="Your Email" required />
+                            </div>
+                            <!-- Phone -->
+                            <div class="col-md-6">
+                                <input type="tel" class="form-control" name="phone" placeholder="Your Phone Number" required />
+                            </div>
+                            <!-- Room Type -->
+                            <div class="col-md-6">
+                                <select class="form-select" name="room_type" required>
+                                    <option selected disabled>Select Room</option>
+                                    <option value="Studio Executive suite">Studio Executive suite</option>
+                                    <option value="One Bedroom suite">One Bedroom suite</option>
+                                    <option value="Two Bedroom suite">Two Bedroom suite</option>
+                                    <option value="4 Bedroom suite">4 Bedroom Villa/Stand Alone</option>
+                                </select>
+                            </div>
+                            <!-- Special Request -->
+                            <div class="col-md-6">
+                                <textarea class="form-control" name="message" placeholder="Special Request" rows="2"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Submit Button -->
+                    <div class="col-md-2">
+                        <button class="btn btn-primary w-100 h-100" type="submit">Book Now</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+ <!--Booking End -->
 
       <!-- Service Start -->
 <div class="container-xxl py-5">
