--- a/service-detail.html
+++ b/service-detail.html
@@ -363,21 +363,22 @@
    <i class="bi bi-whatsapp" style="font-size: 1.5rem;"></i>
 </a>
 
-    <!-- JavaScript Libraries -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" defer></script>
-<script src="lib/wow/wow.min.js" defer></script>
-<script src="lib/easing/easing.min.js" defer></script>
-<script src="lib/waypoints/waypoints.min.js" defer></script>
-<script src="lib/counterup/counterup.min.js" defer></script>
-<script src="lib/owlcarousel/owl.carousel.min.js" defer></script>
-<script src="lib/tempusdominus/js/moment.min.js" defer></script>
-<script src="lib/tempusdominus/js/moment-timezone.min.js" defer></script>
-<script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js" defer></script>
+<!-- jQuery should NOT be deferred -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
+<!-- Other libraries can still be deferred -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/lib/wow/wow.min.js"></script>
+<script src="/lib/easing/easing.min.js"></script>
+<script src="/lib/waypoints/waypoints.min.js"></script>
+<script src="/lib/counterup/counterup.min.js"></script>
+<script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="/lib/tempusdominus/js/moment.min.js"></script>
+<script src="/lib/tempusdominus/js/moment-timezone.min.js"></script>
+<script src="/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-    <!-- Template Javascript -->
-    <script type="module" src="js/main.js"></script>
+<!-- Custom JS -->
+<script type="module" src="/main.js"></script>
 </body>
 
 </html>
