web analytics for each page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       { "@type": "LocationFeatureSpecification", "name": "Fully Furnished Units", "value": true },
       { "@type": "LocationFeatureSpecification", "name": "24/7 Security", "value": true },
       { "@type": "LocationFeatureSpecification", "name": "Near SGR & Nairobi Expressway", "value": true }
+    ],
+    "description": "Secure and affordable Airbnb accommodation near JKIA Nairobi & Nairobi Expressway. Ideal for travelers and business guests.",
+    "sameAs": [
+      "https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg=="
     ]
   }
 
