--- a/room-details.html
+++ b/room-details.html
@@ -65,11 +65,13 @@
     ],
     "description": "Secure and affordable Airbnb accommodation near JKIA Nairobi & Nairobi Expressway. Ideal for travelers and business guests.",
     "sameAs": [
-      "https://www.facebook.com/polarhomes",
-      "https://www.instagram.com/polarhomes"
+      "https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg=="
     ]
   }
   </script>
+
+    <!-- Web Analytics -->
+  <script src="https://analytics.ahrefs.com/analytics.js" data-key="OoHrgikleBNnoZo4NnET5g" async></script>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
