--- a/service-detail.html
+++ b/service-detail.html
@@ -58,6 +58,9 @@
   }
   </script>
 
+    <!-- Web Analytics -->
+  <script src="https://analytics.ahrefs.com/analytics.js" data-key="OoHrgikleBNnoZo4NnET5g" async></script>
+
   <!-- Favicon -->
   <link href="https://polarhomes.org/img/logo.jpg" rel="icon" type="image/x-icon">
 
