--- a/about.html
+++ b/about.html
@@ -51,6 +51,9 @@
   }
   </script>
 
+    <!-- Web Analytics -->
+  <script src="https://analytics.ahrefs.com/analytics.js" data-key="OoHrgikleBNnoZo4NnET5g" async></script>
+
   <!-- Favicon -->
   <link href="/img/logo.jpg" rel="icon" type="image/x-icon">
 
