--- a/service.html
+++ b/service.html
@@ -63,12 +63,13 @@
       { "@type": "LocationFeatureSpecification", "name": "Near Nairobi Expressway", "value": true }
     ],
     "sameAs": [
-      "https://www.facebook.com/polarhomes",
-      "https://www.instagram.com/polarhomes",
-      "https://twitter.com/polarhomes"
+      "https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg=="
     ]
   }
   </script>
+
+    <!-- Web Analytics -->
+  <script src="https://analytics.ahrefs.com/analytics.js" data-key="OoHrgikleBNnoZo4NnET5g" async></script>
 
   <!-- Favicon -->
   <link rel="icon" href="/img/logo.jpg" type="image/x-icon">
@@ -107,25 +108,6 @@
 
 <!-- Header Start -->
 <header>
-  <!-- Top Contact Bar 
-  <div class="container-fluid bg-black text-white py-2 px-lg-5 d-none d-lg-flex align-items-center justify-content-between">
-    <div class="d-flex align-items-center">
-      <div class="me-4 d-flex align-items-center">
-        <i class="fa fa-envelope text-gold me-2"></i>
-        <a href="mailto:lindahmiriza@gmail.com" class="text-white text-decoration-none">lindahmiriza@gmail.com</a>
-      </div>
-      <div class="d-flex align-items-center">
-        <i class="fa fa-phone-alt text-gold me-2"></i>
-        <a href="tel:+254723225791" class="text-white text-decoration-none">+254 723 225 791</a>
-      </div>
-    </div>
-    <div class="social-links">
-      <a href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg==" class="text-white me-3" aria-label="Instagram">
-        <i class="fab fa-instagram fa-lg"></i>
-      </a>
-    </div>
-  </div>-->
-
   <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3 px-lg-5 sticky-navbar">
   <a href="index" class="navbar-brand d-flex align-items-center">
