--- a/testimonial.html
+++ b/testimonial.html
@@ -71,6 +71,9 @@
   }
   </script>
 
+      <!-- Web Analytics -->
+  <script src="https://analytics.ahrefs.com/analytics.js" data-key="OoHrgikleBNnoZo4NnET5g" async></script>
+
   <!-- Favicon -->
   <link rel="icon" href="/img/logo.jpg" type="image/x-icon">
 
