correction of unparsable structured data error

--- a/index.html
+++ b/index.html
@@ -35,44 +35,42 @@
   <script src="https://analytics.ahrefs.com/analytics.js" data-key="OoHrgikleBNnoZo4NnET5g" async></script>
 
   <!-- Schema.org JSON-LD Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LodgingBusiness",
-    "name": "Polarhomes",
-    "image": "https://polarhomes.org/img/logo.jpg",
-    "@id": "https://polarhomes.org",
-    "url": "https://polarhomes.org",
-    "telephone": "+254723225791",
-    "priceRange": "$$",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Syokimau, Nairobi",
-      "addressLocality": "Nairobi",
-      "postalCode": "00100",
-      "addressCountry": "KE"
-    },
-    "geo": {
-      "@type": "GeoCoordinates",
-      "latitude": -1.3308,
-      "longitude": 36.9274
-    },
-    "description": "Polarhomes offers short-term and long-term Airbnb rentals near JKIA Airport. Enjoy affordable, fully furnished, and secure accommodation in Syokimau, Nairobi.",
-    "amenityFeature": [
-      { "@type": "LocationFeatureSpecification", "name": "Free WiFi", "value": true },
-      { "@type": "LocationFeatureSpecification", "name": "Free Parking", "value": true },
-      { "@type": "LocationFeatureSpecification", "name": "Close to JKIA Airport", "value": true },
-      { "@type": "LocationFeatureSpecification", "name": "Fully Furnished Units", "value": true },
-      { "@type": "LocationFeatureSpecification", "name": "24/7 Security", "value": true },
-      { "@type": "LocationFeatureSpecification", "name": "Near SGR & Nairobi Expressway", "value": true }
-    ],
-    "description": "Secure and affordable Airbnb accommodation near JKIA Nairobi & Nairobi Expressway. Ideal for travelers and business guests.",
-    "sameAs": [
-      "https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg=="
-    ]
-  }
-
-  </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LodgingBusiness",
+  "name": "Polarhomes",
+  "image": "https://polarhomes.org/img/logo.jpg",
+  "@id": "https://polarhomes.org",
+  "url": "https://polarhomes.org",
+  "telephone": "+254723225791",
+  "priceRange": "$$",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Syokimau, Nairobi",
+    "addressLocality": "Nairobi",
+    "postalCode": "00100",
+    "addressCountry": "KE"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": -1.3308,
+    "longitude": 36.9274
+  },
+  "description": "Polarhomes offers secure and affordable Airbnb rentals near JKIA Nairobi & Nairobi Expressway. Fully furnished units with free WiFi, free parking, and 24/7 security. Ideal for travelers and business guests.",
+  "amenityFeature": [
+    { "@type": "LocationFeatureSpecification", "name": "Free WiFi", "value": true },
+    { "@type": "LocationFeatureSpecification", "name": "Free Parking", "value": true },
+    { "@type": "LocationFeatureSpecification", "name": "Close to JKIA Airport", "value": true },
+    { "@type": "LocationFeatureSpecification", "name": "Fully Furnished Units", "value": true },
+    { "@type": "LocationFeatureSpecification", "name": "24/7 Security", "value": true },
+    { "@type": "LocationFeatureSpecification", "name": "Near SGR & Nairobi Expressway", "value": true }
+  ],
+  "sameAs": [
+    "https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg=="
+  ]
+}
+</script>
 
   <!-- Favicon -->
   <link href="img/logo.jpg" rel="icon" type="image/x-icon">
